tests/paczka1/small_fuzzy/55022575.err
Error in line 9: QlwVoJI A465 20,2
Error in line 10: ozcR S824 85,8
